Upgraded jqueryUI 1.8.18, and only for IE9, used jqueryUI slider (handles overlap) since it had fixes to work on IE9.  Otherwise using sliderChad for all other browsers.
Verified GCM basically works on IE7, IE8, IE9, plus latest Chrome, Safari, FF on mac and windows

--- a/examples/gcm/css/mapFilter.css
+++ b/examples/gcm/css/mapFilter.css
@@ -96,6 +96,7 @@ body {
 	position:absolute;
 	top:70px;
 	right:0;
+	margin-right:0;
 	background: #99B3CC;
 	overflow:hidden;
 	z-index:2;
